--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
-name: "Mediumish"
-title: "Mediumish"
-description: "Jekyll template, Medium styled, free for bloggers."
+name: "Samantha.her.creator"
+title: "Samantha.her"
+description: "creator samantha의 공간"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: /creator
