--- a/_config.yml
+++ b/_config.yml
@@ -13,17 +13,25 @@ permalink: /:title/
 
 # Authors
 authors:
+  samantha:
+    name: Samantha
+    display_name: Samantha
+    avatar: 'assets/images/samantha_avator.jpeg'
+    gravatar: b1cc14991db7a456fcd761680bbc8f81
+    email: samantha.writer89@gmail.com
+    web: https://samantha-lee89.github.io/creator
+    description: "This is the author box. Write a short description of the author here. You are currently previewing Mediumish demo, a Jekyll template compatible with Github pages."
   sal:
     name: Sal
     display_name: Sal
     gravatar: e56154546cf4be74e393c62d1ae9f9d4
     email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net
+    web: https://samantha.net
     twitter: https://twitter.com/wowthemesnet
     description: "Author of Mediumish, a Bootstrap Medium styled template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
   john:
     name: John
-    display_name: John    
+    display_name: John
     avatar: 'assets/images/avatar.png'
     gravatar: b1cc14991db7a456fcd761680bbc8f81
     email: wowthemesnet@gmail.com
